@@ -145,12 +145,7 @@ char *pArrCredit[] = {
 						"",
 						"IDB_SEPARATOR\b",
 						"",
-						"Tests & Suggestions\r",
-						"",
-						"Albrecht Mehl, Klaus Ondrich, Carsten Paul\f",
-						"and many others...\f",
-						"",
-						"Special thanks to all the users at the TeXnicCenter-Users mailing list\f",
+						"Many thanks to all the users at the TeXnicCenter-Users mailing list\f",
 						"for their tips and suggestions!\f",
 						"",
 						"",
