@@ -1,3 +1,7 @@
+2002/06/20 svenwiegand
+- Removed 'Test & Suggestions' category from the about box -- to many
+  people are not mentioned there.
+
 2002/06/19 svenwiegand
 - Enabled debug database for release builds.
 - Fixed hanging-problem when closing document on fast systems.
